--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Site Cursos</title>
 </head>
-<body  onload="loading()">
+<body onload="loading()">
   <div id="loadingPage">
     <div class="headerLoad">
       <div class="boxLogo"></div>
@@ -22,12 +22,12 @@
         <img class="logo-icon" src="https://cdn2.downdetector.com/static/uploads/logo/UDEMY_3_J0k3zxW.png" alt="">
       </div>
 
-        <!-- <div class="center-div">
-          <a class="btn-header" href="">Dashboard</a>
-          <a class="btn-header" href="">Cursos</a>
-          <a class="btn-header" href="">Planos</a>
-          <a class="btn-header" href="">Alunos</a>
-        </div> -->
+      <div class="center-div">
+        <a class="btn-header" href="">Dashboard</a>
+        <a class="btn-header" href="">Cursos</a>
+        <a class="btn-header" href="">Planos</a>
+        <a class="btn-header" href="">Alunos</a>
+      </div>
       <div class="right-div">
         <div class="user-div" onclick="infoUser()">
           <p>User</p>
